--- a/Raindrop/Presentation/Templates/Clean SwiftUI/Scene.xctemplate/TemplateInfo.plist
+++ b/Raindrop/Presentation/Templates/Clean SwiftUI/Scene.xctemplate/TemplateInfo.plist
@@ -5,7 +5,7 @@
 	<key>DefaultCompletionName</key>
 	<string>MyScene</string>
 	<key>Description</key>
-	<string>This generates a new scene using Uncle Bob&apos;s clean architecture. It consists of the view controller, interactor, presenter, and router. You can then create individual workers to supplement the interactor.</string>
+	<string>This generates a new scene using Uncle Bob&apos;s clean architecture. It consists of the view, interactor, presenter, and router. You can then create individual workers to supplement the interactor.</string>
 	<key>Kind</key>
 	<string>Xcode.IDEKit.TextSubstitutionFileTemplateKind</string>
 	<key>Options</key>
@@ -34,20 +34,6 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___ViewController</string>
-			<key>Description</key>
-			<string>The view controller name</string>
-			<key>Identifier</key>
-			<string>viewControllerName</string>
-			<key>Name</key>
-			<string>View Controller Name:</string>
-			<key>Required</key>
-			<true/>
-			<key>Type</key>
-			<string>static</string>
-		</dict>
-		<dict>
-			<key>Default</key>
 			<string>___VARIABLE_sceneName:identifier___Interactor</string>
 			<key>Description</key>
 			<string>The interactor name</string>
@@ -62,6 +48,20 @@
 		</dict>
 		<dict>
 			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___Models</string>
+			<key>Description</key>
+			<string>The model file name</string>
+			<key>Identifier</key>
+			<string>modelFileName</string>
+			<key>Name</key>
+			<string>Models File Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
 			<string>___VARIABLE_sceneName:identifier___Presenter</string>
 			<key>Description</key>
 			<string>The presenter name</string>
@@ -69,34 +69,6 @@
 			<string>presenterName</string>
 			<key>Name</key>
 			<string>Presenter Name:</string>
-			<key>Required</key>
-			<true/>
-			<key>Type</key>
-			<string>static</string>
-		</dict>
-		<dict>
-			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___Router</string>
-			<key>Description</key>
-			<string>The router name</string>
-			<key>Identifier</key>
-			<string>routerName</string>
-			<key>Name</key>
-			<string>Router Name:</string>
-			<key>Required</key>
-			<true/>
-			<key>Type</key>
-			<string>static</string>
-		</dict>
-		<dict>
-			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___Service</string>
-			<key>Description</key>
-			<string>The service name</string>
-			<key>Identifier</key>
-			<string>serviceName</string>
-			<key>Name</key>
-			<string>Service Name:</string>
 			<key>Required</key>
 			<true/>
 			<key>Type</key>
@@ -118,13 +90,27 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___Models</string>
+			<string>___VARIABLE_sceneName:identifier___Service</string>
 			<key>Description</key>
-			<string>The model file name</string>
+			<string>The service name</string>
 			<key>Identifier</key>
-			<string>modelFileName</string>
+			<string>serviceName</string>
 			<key>Name</key>
-			<string>Models File Name:</string>
+			<string>Service Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___View</string>
+			<key>Description</key>
+			<string>The view name</string>
+			<key>Identifier</key>
+			<string>viewName</string>
+			<key>Name</key>
+			<string>View Name:</string>
 			<key>Required</key>
 			<true/>
 			<key>Type</key>
